# router/app.go
@@ -13,7 +13,12 @@ func Router() *gin.Engine {
 	//Swagger配置
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
+	//问题
 	r.GET("/problem-list", service.GetProblemList)
 	r.GET("/problem-detail", service.GetProblemDetail)
+	//用户
+	r.GET("/user-detail", service.GetUserDetail)
+	//提交记录
+	r.GET("/submit-list", service.GetSubmitList)
 	return r
 }
