# service/submit.go
@@ -1,0 +1,57 @@
+package service
+
+import (
+	"gin_gorm_oj/define"
+	"gin_gorm_oj/models"
+	"github.com/gin-gonic/gin"
+	"log"
+	"net/http"
+	"strconv"
+)
+
+// GetSubmitList
+// @Tags 公共方法
+// @Summary 提交列表
+// @Param page query int false "page"
+// @Param size query int false "size"
+// @Param problem_identity query string false "problem_identity"
+// @Param user_identity query string false "user_identity"
+// @Param status query string false "status"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /submit-list [get]
+func GetSubmitList(c *gin.Context) {
+	size, err := strconv.Atoi(c.DefaultPostForm("size", define.DefaultSize))
+	if err != nil {
+		log.Println("getproblemlist size parse error:", err)
+		return
+	}
+	page, err := strconv.Atoi(c.DefaultPostForm("page", define.DefaultPage))
+	if err != nil {
+		log.Println("getproblemlist page parse error:", err)
+		return
+	}
+	//page == 1 == > offset 0
+	page = (page - 1) * size
+	var count int64
+	list := make([]models.SubmitBasic, 0)
+	problemIdentity := c.Query("problem_identity")
+	userIdentity := c.Query("user_identity")
+	status, _ := strconv.Atoi(c.Query("status"))
+
+	tx := models.GetSubmitList(status, problemIdentity, userIdentity)
+	err = tx.Count(&count).Offset(page).Limit(size).Find(&list).Error
+	if err != nil {
+		log.Println("get submit list error:", err)
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "get submit list error:" + err.Error(),
+		})
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": map[string]interface{}{
+			"list":  list,
+			"count": count,
+		},
+	})
+}
